Should have done this in smaller commits but fabric version is "complete".